# agrobotBack

./: .dockerignore  .env.docker  .envrc  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  run_simulations.py
.direnv/: flake-profile-1-link  flake-profile-3-link
app/: app.py  config.py
app/action/: action.py  action_status.py  action_type.py
app/api/: __init__.py
app/api/action/: __init__.py  action.py  action_status.py  action_type.py  model.py  service.py
app/api/command/: dto.py  service.py
app/api/component/: __init__.py  component.py  model.py  service.py  (+1 more)
app/component/: component.py  component_diagnosis_state.py
app/data/: __init__.py  database.py  enums.py  models.py
app/dto/: robot.py
app/messaging/: __init__.py  mqtt_client.py  service.py
app/middleware/: ip_verification.py
app/robot/: robot.py
app/router/: __init__.py  command.py  component.py  health.py  location.py  robot.py
app/utils/: __init__.py  logger.py
config/mosquitto/: mosquitto.conf
docs/: API_ENDPOINTS.md
tests/: __init__.py
tests/integration/: db_rabbitmq_test.py
tests/simulation/: __init__.py  combined_simulator.py  command_sender.py  mqtt_robot_simulator.py  rabbitmq_robot_responder.py
ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml
ui/app/: page.tsx
ui/components/: analytics-dashboard.tsx  connection-status.tsx  dashboard-layout.tsx  dashboard-overview.tsx  fleet-management.tsx  fleet-overview.tsx  fleet-status-chart.tsx  leaflet-map.tsx  live-map-interface.tsx  map-container.tsx  mission-map-planner.tsx  mission-planning.tsx  mission-progress-chart.tsx  robot-details.tsx  robot-status-card.tsx  settings-panel.tsx  telemetry-chart.tsx  waypoint-editor.tsx
(+37 files in other folders)
